# CppUtilities

./: CMakeLists.txt  MIT-LICENSE.txt  README.md
src/: ComponentAutoFactory.cpp  ComponentAutoFactory.h  ComponentList.h  ComponentRegistry.h  Components.h  EntityArchive.h  MainWindowSDL.cpp  MainWindowSDL.h  main.cpp
src/Components/: ComponentExample.cpp  ComponentExample.h  Name.cpp  Name.h  Position.cpp  Position.h  Script.cpp  Script.h  Velocity.cpp  Velocity.h
src/ImguiUtils/: ImGuiHelpers.h  RAIID.h  UIState.h  imgui_impl.cpp
src/Systems/: GUISystem.cpp  GUISystem.h  Physics.h
src/Widgets/: DrawEntityWidget.cpp  DrawEntityWidget.h  EntityEditor.cpp  EntityEditor.h
